--- a/app/src/main/res/layout/activity_admin_category.xml
+++ b/app/src/main/res/layout/activity_admin_category.xml
@@ -147,10 +147,9 @@
         android:layout_marginBottom="10dp"
         android:background="@color/colorPrimaryDark"
         android:text="Check New Orders"
-        android:textColor="@android:color/white"
-        android:textSize="25dp"
         android:textAllCaps="false"
-        />
+        android:textColor="@android:color/white"
+        android:textSize="25dp" />
 
     <Button
         android:id="@+id/admin_logout_btn"
