--- a/app/src/main/res/layout/activity_admin_new_orders.xml
+++ b/app/src/main/res/layout/activity_admin_new_orders.xml
@@ -5,21 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AdminNewOrdersActivity">
+
     <RelativeLayout
         android:id="@+id/r2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/colorPrimaryDark"
         android:layout_alignParentTop="true"
-        >
+        android:background="@color/colorPrimaryDark">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="New Orders"
+            android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="25dp"
-            android:textAlignment="center"
-            android:layout_marginTop="10dp"
 
             />
     </RelativeLayout>
@@ -31,5 +32,5 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/r2"
 
-        ></androidx.recyclerview.widget.RecyclerView>
+        tools:visibility="visible"></androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
